--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   audioplayers: ^4.0.1
   sliding_sheet: ^0.5.2
   carousel_slider: ^4.2.1
+  go_router: ^13.2.0
+  provider: ^6.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
