--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,13 @@ dependencies:
   carousel_slider: ^4.2.1
   go_router: ^13.2.0
   provider: ^6.1.2
+  flutter_map: ^4.0.0
+  mapbox_gl: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  latlong2: ^0.8.2
 
 dev_dependencies:
   flutter_test:
